# ingestion

./: # Multi purpose crawler.md  .gitignore  HELP.md  README.md  build.gradle.kts  skaffold.yaml
k8s/: deployment.yml  kafka-deployment.yml
rust/: Cargo.toml
rust/.devcontainer/: Dockerfile  devcontainer.json
rust/src/: kafka.rs  main.rs  operation.rs
src/main/kotlin/dk/millipede/ingestion/: IngestionApplication.kt
src/main/kotlin/dk/millipede/ingestion/config/: KafkaConfig.kt
src/main/kotlin/dk/millipede/ingestion/streams/: TestStream.kt
src/test/kotlin/dk/millipede/ingestion/: IngestionApplicationTests.kt
