[package]
name = "rust"
version = "0.1.0"
authors = ["Simon Vandel Sillesen <svs@netcompany.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.24", features = ["cmake-build"] }
tokio = { version = "0.2", features = ["rt-core", "time", "macros"]}
futures = "0.3"
clap = "2.33.3"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"